--- a/libimgsmlr/Makefile
+++ b/libimgsmlr/Makefile
@@ -1,15 +1,20 @@
 # imgsmlr/Makefile
 
 CC=gcc
-CFLAGS=-g -Werror -fPIC -I c
+CFLAGS=-g -Werror -fPIC
 LDFLAGS=-lgd
 
 SRCS=imgsmlr.c
 
-all: libimgsmlr.so
+all: libimgsmlr.so libimgsmlr.$(shell uname).a
 
 libimgsmlr.so: ${SRCS}
 	$(CC) ${CFLAGS} ${LDFLAGS} -Werror $^ -shared -o $@
 
+libimgsmlr.$(shell uname).a: ${SRCS}
+	$(CC) ${CFLAGS_A} -c $^
+	ar rc $@ *.o
+	rm -f *.o
+
 clean:
-	rm -f libimgsmlr.so
+	rm -f libimgsmlr.so libimgsmlr.*.a
